tests/regression/errors/basic/undefined_var_23.csd
// Undefined variable test 23
vibez.spill("Using undefined:", undefined_var_23)
sus result drip = missing_variable + 23
